--- a/CODIGOS/Extração_de_dados_de_ÚNICO_VÍDEO_([SCRIPT_01]_Video_Recovery_data_v3).ipynb
+++ b/CODIGOS/Extração_de_dados_de_ÚNICO_VÍDEO_([SCRIPT_01]_Video_Recovery_data_v3).ipynb
@@ -61,6 +61,8 @@
         "\n",
         "import pandas as pd\n",
         "import numpy as np\n",
+        "import scipy\n",
+        "\n",
         "\n",
         "import gspread\n",
         "from oauth2client.service_account import ServiceAccountCredentials\n",
